[package]
name = "autobrigtness"
version = "0.1.0"
authors = ["Sam Nalty <sam@snalty.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "3.3.0"

[[bin]]
name = "autobrigtness"
path = "main.rs"

[[bin]]
name = "test"
path = "test.rs"

[[bin]]
name = "display_controller"
path = "display_controller.rs"